fix: dark mode text color in MultiSelect

--- a/packages/design-system/src/components/FormControl/MultiSelect/web/MultiSelect.module.scss
+++ b/packages/design-system/src/components/FormControl/MultiSelect/web/MultiSelect.module.scss
@@ -62,6 +62,7 @@
   justify-content: space-between;
   gap: var(--spacing-8);
   padding: 0 var(--spacing-8) 0 var(--spacing-12);
+  color: var(--color-text-on-light-primary);
   background: transparent;
   border: none;
   cursor: pointer;
@@ -142,7 +143,7 @@
   padding: var(--spacing-4);
   margin: 0;
   list-style: none;
-  border-radius: var(--radius-8);
+  border-radius: var(--radius-16);
   z-index: 20;
   max-height: 280px;
   overflow-y: auto;
@@ -159,7 +160,7 @@
   display: flex;
   align-items: center;
   gap: var(--spacing-8);
-  padding: var(--spacing-12) var(--spacing-16);
+  padding: var(--spacing-12);
   border-radius: var(--radius-4);
   cursor: pointer;
   user-select: none;
@@ -209,6 +210,7 @@
 .multi-select-option-label {
   flex: 1;
   min-width: 0;
+  color: var(--color-text-on-light-primary);
 }
 
 .multi-select-option-text-small {
